--- a/30-10/index.html
+++ b/30-10/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>teste</title>
 </head>
 <body>
-    
+    <h1>Joao lindo</h1>
+    <p style="color: blue;">joao é bem alto</p>
+    <p style="color: brown;"></p>joao é bem no futmesa</p>
+
 </body>
 </html>
