--- a/30-10/index.html
+++ b/30-10/index.html
@@ -10,6 +10,24 @@
     <h1>Joao lindo</h1>
     <p style="color: blue;">joao é bem alto</p>
     <p style="color: brown;"></p>joao é bem no futmesa</p>
-
+    <a href="https://img.freepik.com/vetores-premium/vetor-esporte-futebol-volei-e-basquete_243445-837.jpg">3 modalidaes</a>
+    <table>
+        <tr>
+          <th>futebol</th>
+          <th>volei</th>
+          <th>basquete</th>
+        </tr>
+        <tr>
+          <td>trave</td>
+          <td>rede</td>
+          <td>cesta</td>
+        </tr>
+        <tr>
+          <td>campo/quadra</td>
+          <td>areia/salão</td>
+          <td>salão</td>
+        </tr>
+      </table>
+      
 </body>
 </html>
